--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   }
   .playing {
     transform: scale(1.1);
-    border-color: #ffc600;
+    border-color: red;
     box-shadow: 0 0 10px #ffc600;
   }
   kbd {
